@startuml
namespace Yacare.ComercioBundle.Entity  {
	class ConActividades << (T,#FF7700) trait >> {
		+Actividad1
		+Actividad2
		+Actividad3
		+Actividad4
		+Actividad5
		+Actividad6
	}
	class ConDatosComercio << (T,#FF7700) trait >> {
		+Local
		+ConActividades
	}
	class TramiteHabilitacionComercial << class >> {
		+Comercio
		+UsoSuelo
		--
		+EstaListoParaTerminar()
	}
	class Actividad << class >> {
		+ParentNode
		+Clanae1997
		+Clanae2010
		+ClaeAfip
		+DgrTdf
		+Clamae2014
		+CategoriaAntigua
		+CodigoCpu
		+RequiereDbeh
		+RequiereDeyma
		+Exenta
		+RequiereCamaraBarro
		+RequiereCamaraGrasa
		+RequiereInfEscolar
		+RequiereImpactoSonoro
		+RequiereFactorOcupacion
		+Ley105
		+Incluye
		+NoIncluye
		+Final
	}
	class Local << class >> {
		+Tipo
		+Superficie
		+DepositoClase
		+VeredaMunicipal
		+Canaletas
		+CestoBasura
		+PuertaEmergencia
		+AnchoSalida
		+EnParqueIndustrial
	}
	class CertificadoHabilitacionComercial << class >> {
		+Comercio
	}
	class DepositoClase << class >> {
		+Categoria
		+Tipo
		+ClaseHasta300
		+ClaseHasta1000
		+ClaseMasDe1000
	}
	class Comercio << class >> {
		+Estado
		+CertificadoHabilitacion
		+Local
		+Actividad1
		+Actividad2
		+Actividad3
		+Actividad4
		+Actividad5
		+Actividad6
	}
	
	
	
	
	Comercio ..|> ConDatosComercio : implementa
	
	ConDatosComercio ..|> ConActividades : implementa
	ConDatosComercio "1" o-- "0..1" Local : puede tener
	
	ConActividades "1" o-- "0..n" Actividad : contiene
	
	Local "1" o-- "0..1" DepositoClase : puede tener
	Local "1" o-- "0..1" Yacare.CatastroBundle.Entity.Partida : puede tener
	
	TramiteHabilitacionComercial --|> Yacare.TramitesBundle.Entity.Tramite
	TramiteHabilitacionComercial ..|> ConDatosComercio : implementa
	TramiteHabilitacionComercial "0..1" o-- "0..1" Yacare.CatastroBundle.Entity.UsoSuelo : puede tener
	TramiteHabilitacionComercial "0..n" o-- "1" Comercio : contiene
	
	CertificadoHabilitacionComercial --|> Yacare.TramitesBundle.Entity.Comprobante
	CertificadoHabilitacionComercial "0..n" o-- "1" Comercio : contiene
}
!include /home/alediaz/workspace/Yacare1/docs/Clases/Yacaré/Tramites/DC_Entidades.pu
@enduml

